--- a/portafolio.html
+++ b/portafolio.html
@@ -4,6 +4,7 @@
 
     
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/header-tel.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/portafolio.css">
     
